[metadata]
description-file = README.md

[flake8]
exclude = setup.py,docs/*,examples/*
max-line-length = 130
per-file-ignores =
    graphene_mongo/tests/test_mutation.py: F401, F811
    graphene_mongo/tests/test_query.py: F401, F811
    graphene_mongo/tests/test_relay_query.py: F401, F811
    graphene_mongo/tests/test_fields.py: F401, F811
[coverage:run]
omit = */tests/*

[isort]
known_first_party=graphene,graphene_mongo

[aliases]
test=pytest

[tool:pytest]
addopts=-vv
python_files = graphene_mongo/tests/*.py
